# flightsim

./: .gitignore  CMakeLists.txt  CSVParser.cpp  CSVParser.h  Command.cpp  Command.h  CommandsDB.csv  README.md  Variable.cpp  Variable.h  VariableManager.cpp  VariableManager.h  command.h  exampleForLexing  flightSim.cpp  flightSim.h  fly.txt  flytester.txt  lexer.cpp  lexer.h  lexingConvention.txt  main.cpp  parser.cpp  parser.h  variable.h
Commands/: ChangeVar.cpp  ChangeVar.h  ConditionParser.cpp  ConditionParser.h  ConnectServer.cpp  ConnectServer.h  DefineVar.cpp  DefineVar.h  DoIf.cpp  DoIf.h  OpenClient.cpp  OpenClient.h  OpenServer.cpp  OpenServer.h  Print.cpp  Print.h  Sleep.cpp  Sleep.h  WhileLoop.cpp  WhileLoop.h
Expression/: BinaryOperator.cpp  BinaryOperator.h  Div.cpp  Div.h  Expression.h  ExpressionVariable.cpp  ExpressionVariable.h  Interpreter.cpp  Interpreter.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  Plus.cpp  Plus.h  UMinus.cpp  UMinus.h  UPlus.cpp  UPlus.h  UnaryOperator.cpp  UnaryOperator.h  Value.cpp  Value.h
